sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: ';' expected but 'else' found.
    } else {
      ^AlgGnomeSort:18: error: Unmatched closing brace '}' ignored here
}
^