sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0;
  while (i<=getValueCount()-2){
    if (isSmaller(i+1, i)){
      swap(i+1, i);
      i=i-1;
      }
    } else {
      i+=1
    }
  if (i==0)
   i = 1
  }
}